--- a/index.html
+++ b/index.html
@@ -2,64 +2,34 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>OBS Ticker</title>
+  <title>Live Ticker</title>
   <style>
-    body {
-      margin: 0;
-      background: transparent;
-      overflow: hidden;
-      font-family: sans-serif;
-    }
-    #ticker-container {
-      position: relative;
-      width: 100%;
-      height: 100px;
-      overflow: hidden;
-      white-space: nowrap;
-      background-color: rgba(0,0,0,0.5);
-    }
-    #ticker-text {
-      display: inline-block;
-      position: absolute;
-      white-space: nowrap;
-      color: white;
-      font-size: 48px;
-      animation: scroll 20s linear infinite;
-    }
-    @keyframes scroll {
-      from { left: 100%; }
-      to { left: -100%; }
-    }
-    #controls {
-      position: absolute;
-      top: 0;
-      left: 0;
-      padding: 10px;
-      background: rgba(0,0,0,0.7);
-      color: white;
-      width: 100%;
-    }
-    #textInput {
-      width: 80%;
-      font-size: 24px;
-    }
+    body { margin:0; background:transparent; overflow:hidden; }
+    #ticker{ position:fixed; bottom:0; width:100%; background:#222; color:#fff;
+             padding:10px; font-size:20px; white-space:nowrap; }
+    #ticker span{ display:inline-block; padding-left:100%; animation:scroll 15s linear infinite; }
+    @keyframes scroll { from{transform:translateX(0%);} to{transform:translateX(-100%);} }
   </style>
 </head>
 <body>
-  <div id="controls">
-    <input type="text" id="textInput" placeholder="Enter ticker text" />
-    <button onclick="updateText()">Update</button>
-  </div>
-  <div id="ticker-container">
-    <div id="ticker-text">Welcome to OBS Ticker</div>
-  </div>
-
+  <div id="ticker"><span>Loading…</span></div>
   <script>
-    function updateText() {
-      const input = document.getElementById('textInput').value;
-      const ticker = document.getElementById('ticker-text');
-      ticker.textContent = input;
+    const URL = 'https://YOUR_GITHUB_USERNAME.github.io/YOUR_REPO_NAME/ticker.json';
+    const span = document.querySelector('#ticker span');
+
+    async function refresh() {
+      try {
+        let r = await fetch(URL, {cache:'no-store'});
+        if (!r.ok) throw '';
+        let j = await r.json();
+        span.textContent = j.text || '';
+      } catch(e) {
+        console.warn('Failed to load ticker');
+      }
     }
+
+    refresh();
+    setInterval(refresh, 5000); // every 5s
   </script>
 </body>
 </html>
