--- a/index.html
+++ b/index.html
@@ -4,32 +4,44 @@
   <meta charset="UTF-8">
   <title>Live Ticker</title>
   <style>
-    body { margin:0; background:transparent; overflow:hidden; }
-    #ticker{ position:fixed; bottom:0; width:100%; background:#222; color:#fff;
-             padding:10px; font-size:20px; white-space:nowrap; }
-    #ticker span{ display:inline-block; padding-left:100%; animation:scroll 15s linear infinite; }
-    @keyframes scroll { from{transform:translateX(0%);} to{transform:translateX(-100%);} }
+    #ticker {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background: #222;
+      color: #fff;
+      padding: 10px;
+      font-size: 20px;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+    #ticker span {
+      display: inline-block;
+      padding-left: 100%;
+      animation: scroll 15s linear infinite;
+    }
+    @keyframes scroll {
+      from { transform: translateX(0%); }
+      to { transform: translateX(-100%); }
+    }
   </style>
 </head>
 <body>
-  <div id="ticker"><span>Loading…</span></div>
-  <script>
-    const URL = 'https://YOUR_GITHUB_USERNAME.github.io/YOUR_REPO_NAME/ticker.json';
-    const span = document.querySelector('#ticker span');
+  <div id="ticker"><span>Loading ticker...</span></div>
 
-    async function refresh() {
+  <script>
+    async function fetchTicker() {
       try {
-        let r = await fetch(URL, {cache:'no-store'});
-        if (!r.ok) throw '';
-        let j = await r.json();
-        span.textContent = j.text || '';
-      } catch(e) {
-        console.warn('Failed to load ticker');
+        const response = await fetch('https://raw.githubusercontent.com/irishobserver/Irish-Observer-stuff/main/ticker.json');
+        const data = await response.json();
+        document.querySelector('#ticker span').textContent = data.text;
+      } catch (error) {
+        console.error('Error fetching ticker:', error);
       }
     }
 
-    refresh();
-    setInterval(refresh, 5000); // every 5s
+    fetchTicker();
+    setInterval(fetchTicker, 5000); // Update every 5 seconds
   </script>
 </body>
 </html>
