--- a/admin.html
+++ b/admin.html
@@ -6,44 +6,69 @@
 </head>
 <body>
   <h1>Update Ticker</h1>
-  <textarea id="tickerText" rows="4" cols="50"></textarea><br>
+  
+  <label for="token">GitHub PAT:</label><br>
+  <input type="password" id="token" placeholder="Paste your token here" style="width:60%"><br><br>
+
+  <label for="tickerText">Ticker Text:</label><br>
+  <textarea id="tickerText" rows="4" cols="50" placeholder="Enter new ticker message here..."></textarea><br><br>
+
   <button onclick="updateTicker()">Update</button>
 
   <script>
     async function updateTicker() {
-      const text = document.getElementById('tickerText').value;
+      const token = document.getElementById('token').value.trim();
+      const text = document.getElementById('tickerText').value.trim();
 
-      const response = await fetch('https://api.github.com/repos/irishobserver/Irish-Observer-stuff/contents/ticker.json', {
-        method: 'GET',
-        headers: {
-          'Accept': 'application/vnd.github.v3+json',
-          'Authorization': 'token YOUR_PERSONAL_ACCESS_TOKEN'
+      if (!token || !text) {
+        alert("Please enter both a token and ticker text.");
+        return;
+      }
+
+      const url = 'https://api.github.com/repos/irishobserver/Irish-Observer-stuff/contents/ticker.json';
+
+      try {
+        // Step 1: Fetch current file to get SHA
+        const res = await fetch(url, {
+          method: 'GET',
+          headers: {
+            'Accept': 'application/vnd.github.v3+json',
+            'Authorization': `Bearer ${token}`
+          }
+        });
+
+        if (!res.ok) {
+          throw new Error(`GitHub API GET failed: ${res.status}`);
         }
-      });
 
-      const data = await response.json();
+        const fileData = await res.json();
 
-      const updatedContent = btoa(JSON.stringify({ text }));
+        // Step 2: Update content with new text
+        const updatedContent = btoa(JSON.stringify({ text }));
 
-      await fetch('https://api.github.com/repos/irishobserver/Irish-Observer-stuff/contents/ticker.json', {
-        method: 'PUT',
-        headers: {
-          'Accept': 'application/vnd.github.v3+json',
-          'Authorization': 'token YOUR_PERSONAL_ACCESS_TOKEN'
-        },
-        body: JSON.stringify({
-          message: 'Update ticker text',
-          content: updatedContent,
-          sha: data.sha
-        })
-      });
+        const updateRes = await fetch(url, {
+          method: 'PUT',
+          headers: {
+            'Accept': 'application/vnd.github.v3+json',
+            'Authorization': `Bearer ${token}`
+          },
+          body: JSON.stringify({
+            message: 'Update ticker text',
+            content: updatedContent,
+            sha: fileData.sha
+          })
+        });
 
-      alert('Ticker updated!');
-    }
-  </script>
-</body>
-</html>
+        if (!updateRes.ok) {
+          const errText = await updateRes.text();
+          throw new Error(`PUT failed: ${updateRes.status} — ${errText}`);
+        }
 
+        alert('✅ Ticker updated successfully!');
+      } catch (error) {
+        console.error(error);
+        alert(`❌ Failed to update ticker: ${error.message}`);
+      }
     }
   </script>
 </body>
