--- a/admin.html
+++ b/admin.html
@@ -6,16 +6,16 @@
 </head>
 <body>
   <h1>Update Ticker</h1>
-  <textarea id="tickerText" rows="4" cols="50"></textarea><br>
+  <textarea id="tickerText" rows="4" cols="50" placeholder="Enter your ticker text here..."></textarea><br>
   <button onclick="updateTicker()">Update</button>
 
   <script>
     async function updateTicker() {
-      const token = prompt("Enter your GitHub token:");
+      const token = "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"; // Replace with your GitHub PAT
       const text = document.getElementById('tickerText').value;
 
-      // First: Get the current SHA of the file
-      const response = await fetch('https://api.github.com/repos/irishobserver/Irish-Observer-stuff/contents/ticker.json', {
+      // Step 1: Get the current file SHA (required for GitHub API update)
+      const getResponse = await fetch('https://api.github.com/repos/irishobserver/Irish-Observer-stuff/contents/ticker.json', {
         method: 'GET',
         headers: {
           'Accept': 'application/vnd.github.v3+json',
@@ -23,18 +23,19 @@
         }
       });
 
-      if (!response.ok) {
-        alert("Failed to fetch file info: " + response.status);
+      if (!getResponse.ok) {
+        const error = await getResponse.json();
+        alert(`Failed to fetch file info: ${getResponse.status} - ${error.message}`);
         return;
       }
 
-      const data = await response.json();
+      const data = await getResponse.json();
 
-      // Base64 encode the updated content
+      // Encode the new content in base64
       const updatedContent = btoa(JSON.stringify({ text }));
 
-      // Second: PUT to update the file
-      const updateResponse = await fetch('https://api.github.com/repos/irishobserver/Irish-Observer-stuff/contents/ticker.json', {
+      // Step 2: PUT to update the file
+      const putResponse = await fetch('https://api.github.com/repos/irishobserver/Irish-Observer-stuff/contents/ticker.json', {
         method: 'PUT',
         headers: {
           'Accept': 'application/vnd.github.v3+json',
@@ -47,8 +48,9 @@
         })
       });
 
-      if (!updateResponse.ok) {
-        alert("Update failed: " + updateResponse.status);
+      if (!putResponse.ok) {
+        const error = await putResponse.json();
+        alert(`Update failed: ${putResponse.status} - ${error.message}`);
       } else {
         alert('Ticker updated successfully!');
       }
